# http-server-benchmark

./: compose.yaml
.github/workflows/: test.yml
actix-proxy/: Cargo.toml  Dockerfile
actix-proxy/src/: main.rs
go-proxy/: go.mod  go.sum  main.go  run-local.sh
hyper-proxy/: Cargo.toml  Dockerfile
hyper-proxy/src/: main.rs
ping_server/: README.md  gleam.toml  manifest.toml  test.sh
ping_server/src/: ping_server.gleam  router.gleam
ping_server/src/app/: context.gleam
