[package]
name = "actix-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
awc = "3.5.1"
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
futures-util = { version = "0.3.31", default_features = false, features = [
  "std",
] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
url = "2.5.4"
