[package]
name = "hyper-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.26", features = ["derive", "env"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
